# Multithreaded-ChatAPP

./: CMakeLists.txt  README.md  build.sh
lib/: CMakeLists.txt
lib/includes/: client.hpp  server.hpp  socket.hpp  user.hpp
lib/src/: client.cpp  server.cpp  socket.cpp  user.cpp
tests/: MultithreadedChatClient.cpp  MultithreadedChatServer.cpp
